[package]
name = "zeronet_address"
version = "0.1.1"
authors = ["Ansho Rei <anshorei@protonmail.com>"]
edition = "2018"
description = "ZeroNet address"
documentation = "http://www.github.com/Anshorei/zeronet_address"
readme = "README.md"
homepage = "http://www.github.com/Anshorei/zeronet_address"
repository = "http://www.github.com/Anshorei/zeronet_address"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "~1.0.133"
serde_json = "~1.0.74"
thiserror = "~1.0.30"
sha2 = "~0.10.1"
